--- a/index.html
+++ b/index.html
@@ -24,3 +24,21 @@
     <script src="script.js"></script>
 </body>
 </html>
+// ЗАМЕНИТЕ этот код в script:
+const services = [
+    {
+        id: 1,
+        name: "Консультация",
+        price: 1000,
+        description: "Первичная консультация специалиста"
+    },
+    {
+        id: 2, 
+        name: "Дизайн макета",
+        price: 5000,
+        description: "Разработка дизайн-макета"
+    }
+];
+
+// И сразу отобразите их
+displayServices(services);
