--- a/public/shop.html
+++ b/public/shop.html
@@ -1,197 +1,77 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Магазин — MiniApp</title>
+  <meta charset="UTF-8">
+  <title>Магазин</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body{font-family:Inter,Arial,Helvetica,sans-serif;max-width:1100px;margin:10px auto;padding:12px;background:#f4f6fb;color:#111}
-    header{display:flex;align-items:center;justify-content:space-between;gap:12px}
-    h1{margin:0;font-size:20px}
-    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(220px,1fr));gap:12px;margin-top:12px}
-    .card{background:#fff;padding:10px;border-radius:12px;box-shadow:0 6px 18px rgba(12,18,30,0.06)}
-    .card img{width:100%;height:140px;object-fit:cover;border-radius:8px}
-    .price{font-weight:700;margin-top:6px}
-    .actions{display:flex;gap:8px;margin-top:8px}
-    button{padding:8px;border-radius:8px;border:0;background:#1f6feb;color:#fff;cursor:pointer}
-    .muted{color:#666;font-size:13px}
-    .modal{position:fixed;inset:0;background:rgba(0,0,0,0.45);display:flex;align-items:center;justify-content:center;padding:16px;z-index:999}
-    .modal .box{background:#fff;padding:16px;border-radius:12px;max-width:720px;width:100%;box-shadow:0 8px 30px rgba(2,6,23,0.2)}
-    .row{display:flex;gap:8px;align-items:center;flex-wrap:wrap;margin-top:8px}
-    select,input[type="text"]{padding:8px;border-radius:8px;border:1px solid #ddd;width:100%}
-    .footer{margin-top:16px;text-align:center;color:#666}
+    body { background: #f8f9fa; }
+    .card img { object-fit: cover; height: 180px; }
   </style>
 </head>
 <body>
-  <header>
-    <div>
-      <h1>Магазин — Mini App</h1>
-      <div class="muted">Каталог товаров</div>
-    </div>
-    <div>
-      <button id="open-admin">Админка</button>
-    </div>
-  </header>
-
-  <main>
-    <section id="catalog" class="grid"></section>
-
-    <div id="no-products" class="muted" style="display:none;margin-top:12px">Пока нет товаров</div>
-  </main>
-
-  <div class="footer">
-    <small>Открыто как Telegram Web App</small>
+  <div class="container py-4">
+    <h2 class="text-center mb-4">🛍️ Наш магазин</h2>
+    <div id="products" class="row g-4"></div>
   </div>
 
-  <!-- Modal (product) -->
-  <div id="modal" class="modal" style="display:none">
-    <div class="box">
-      <button id="close-modal" style="float:right;background:#eee;color:#000;padding:6px;border-radius:8px;border:0;cursor:pointer">✕</button>
-      <div id="modal-body"></div>
+  <!-- Модалка оплаты -->
+  <div class="modal fade" id="payModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Выберите способ оплаты</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <div id="paymentMethods" class="list-group"></div>
+        </div>
+      </div>
     </div>
   </div>
 
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // Init Telegram WebApp (работает и без него)
-    const tg = window.Telegram?.WebApp;
-    if (tg) tg.ready();
+    const productsEl = document.getElementById('products');
+    const paymentMethodsEl = document.getElementById('paymentMethods');
+    let selectedProduct = null;
 
-    const API = '/api'; // относительные пути к вашему backend
-
+    // Загрузка товаров
     async function loadProducts() {
-      const res = await fetch(API + '/products');
+      const res = await fetch('/api/products');
       const products = await res.json();
-      renderProducts(products);
-    }
-
-    function renderProducts(products) {
-      const container = document.getElementById('catalog');
-      container.innerHTML = '';
-      if (!products || products.length === 0) {
-        document.getElementById('no-products').style.display = 'block';
-        return;
-      } else document.getElementById('no-products').style.display = 'none';
-
-      products.forEach(p => {
-        const el = document.createElement('div');
-        el.className = 'card';
-        el.innerHTML = `
-          <img src="${p.image_url || 'https://via.placeholder.com/600x400?text=No+Image'}" alt="${escapeHtml(p.title)}" />
-          <h3 style="margin:8px 0 4px 0">${escapeHtml(p.title)}</h3>
-          <div class="muted">Артикул: ${escapeHtml(p.sku || '-')}</div>
-          <div class="price">${formatMoney(p.price)}</div>
-          <div class="actions">
-            <button data-id="${p.id}" class="open">Подробнее</button>
-          </div>
-        `;
-        container.appendChild(el);
-      });
-
-      document.querySelectorAll('.open').forEach(btn => btn.addEventListener('click', async (e) => {
-        const id = e.target.dataset.id;
-        const r = await fetch(API + '/products/' + id);
-        const p = await r.json();
-        openProductModal(p);
-      }));
-    }
-
-    function openProductModal(p) {
-      const body = document.getElementById('modal-body');
-      body.innerHTML = `
-        <div style="display:flex;gap:12px;align-items:flex-start">
-          <img src="${p.image_url || 'https://via.placeholder.com/600x400?text=No+Image'}" style="width:220px;height:150px;object-fit:cover;border-radius:8px" />
-          <div style="flex:1">
-            <h2 style="margin:0">${escapeHtml(p.title)}</h2>
-            <div class="muted" style="margin-top:6px">Артикул: ${escapeHtml(p.sku || '-')}</div>
-            <p style="margin-top:8px">${escapeHtml(p.description || '')}</p>
-            <div style="margin-top:8px;font-weight:700">${formatMoney(p.price)}</div>
-
-            <div class="row" style="margin-top:12px">
-              <label style="min-width:120px">Способ оплаты</label>
-              <select id="pay-method" style="width:auto"></select>
-            </div>
-
-            <div id="pay-details" class="muted" style="margin-top:8px"></div>
-
-            <div class="row" style="margin-top:12px">
-              <button id="i-paid">Оплатил (добавить заказ)</button>
-              <button id="contact-admin" style="background:#22c55e">Связаться с админом</button>
+      productsEl.innerHTML = products.map(p => `
+        <div class="col-md-4">
+          <div class="card shadow-sm">
+            <img src="${p.image_url || 'https://via.placeholder.com/300'}" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">${p.title}</h5>
+              <p class="card-text">💰 ${p.price} ₽</p>
+              <button class="btn btn-primary w-100" onclick="buy('${p.id}')">Купить</button>
             </div>
           </div>
         </div>
-      `;
-
-      // load methods
-      (async () => {
-        const res = await fetch(API + '/payments');
-        const methods = await res.json();
-        const sel = document.getElementById('pay-method');
-        sel.innerHTML = methods.filter(m=>m.enabled==1 || m.enabled==true).map(m => `<option value="${m.id}">${escapeHtml(m.name)}</option>`).join('');
-        showPayDetails(sel.value);
-        sel.addEventListener('change',()=> showPayDetails(sel.value));
-      })();
-
-      document.getElementById('i-paid').onclick = async () => {
-        const methodId = document.getElementById('pay-method').value;
-        // создаём заказ: product_id, amount, payment_method_id, payment_details(optional), customer_contact(optional)
-        const payload = {
-          product_id: p.id,
-          amount: p.price,
-          payment_method_id: methodId,
-          payment_details: { note: 'Оплата подтверждена покупателем (ручной режим)' },
-          customer_contact: (tg && tg.initDataUnsafe && tg.initDataUnsafe.user) ? (tg.initDataUnsafe.user.username || tg.initDataUnsafe.user.id) : ''
-        };
-        const create = await fetch(API + '/orders', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(payload) });
-        if (create.ok) {
-          alert('Заказ зарегистрирован. Свяжитесь с админом для проверки оплаты.');
-          closeModal();
-        } else {
-          alert('Ошибка при создании заказа');
-        }
-      };
-
-      document.getElementById('contact-admin').onclick = () => {
-        // замените <admin_username> на реальный username вашего админа или передавайте из env
-        const admin = 'your_admin_username';
-        window.open('https://t.me/' + admin, '_blank');
-      };
-
-      document.getElementById('modal').style.display = 'flex';
+      `).join('');
     }
 
-    function showPayDetails(methodId) {
-      fetch(API + '/payments').then(r=>r.json()).then(list=>{
-        const m = list.find(x=>x.id===methodId);
-        if (!m) { document.getElementById('pay-details').innerText='Нет данных'; return;}
-        let details = m.details;
-        try { details = typeof details === 'string' ? JSON.parse(details) : details; } catch(e){}
-        let html = `<strong>${escapeHtml(m.name)}</strong><div style="margin-top:6px">`;
-        if (details && typeof details === 'object') {
-          for (const k in details) {
-            html += `<div class="muted">${escapeHtml(k)}: ${escapeHtml(String(details[k]||''))}</div>`;
-          }
-        } else {
-          html += `<div class="muted">${escapeHtml(String(m.details||''))}</div>`;
-        }
-        html += `</div>`;
-        document.getElementById('pay-details').innerHTML = html;
-      });
+    // Покупка товара
+    async function buy(productId) {
+      selectedProduct = productId;
+      const res = await fetch('/api/payments');
+      const methods = await res.json();
+      paymentMethodsEl.innerHTML = methods.filter(m => m.enabled).map(m => `
+        <button class="list-group-item list-group-item-action" onclick="pay('${m.id}')">
+          ${m.name}
+        </button>
+      `).join('');
+      const modal = new bootstrap.Modal(document.getElementById('payModal'));
+      modal.show();
     }
 
-    function closeModal(){ document.getElementById('modal').style.display='none' }
-
-    document.getElementById('close-modal').addEventListener('click', closeModal);
-    document.getElementById('open-admin').addEventListener('click', ()=> location.href = '/admin.html');
-
-    function formatMoney(cents){
-      if (cents === null || cents === undefined) return '-';
-      // assuming price stored as integer (e.g., рубли). adjust as needed.
-      return `${Number(cents).toLocaleString('ru-RU')} ₽`;
-    }
-    function escapeHtml(s){ if(!s) return ''; return String(s).replace(/[&<>"']/g, c=>({ '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
-
-    loadProducts();
-  </script>
-</body>
-</html>
+    // Подтверждение оплаты
+    async function pay(paymentId) {
+      await fetch('/api/orders', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json'
