--- a/public/admin.html
+++ b/public/admin.html
@@ -40,15 +40,39 @@
     </div>
   </div>
 
+  <!-- Модальное окно для редактирования -->
+  <div class="modal fade" id="editModal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form id="editForm">
+          <div class="modal-header">
+            <h5 class="modal-title">Редактировать товар</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+          </div>
+          <div class="modal-body">
+            <input type="hidden" id="editId">
+            <input type="text" id="editTitle" class="form-control mb-3" placeholder="Название" required>
+            <textarea id="editDescription" class="form-control mb-3" placeholder="Описание"></textarea>
+            <input type="number" id="editPrice" class="form-control mb-3" placeholder="Цена" required>
+            <input type="text" id="editSku" class="form-control mb-3" placeholder="Артикул">
+            <label class="form-label">Новое фото (необязательно):</label>
+            <input type="file" id="editImage" class="form-control mb-3" accept="image/*">
+          </div>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-primary">Сохранить</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     let adminPass = "";
 
     function login() {
       const pass = document.getElementById('adminPass').value.trim();
-      if (!pass) {
-        alert("Введите пароль");
-        return;
-      }
+      if (!pass) return alert("Введите пароль");
       adminPass = pass;
       document.getElementById("loginForm").style.display = "none";
       document.getElementById("adminPanel").style.display = "block";
@@ -80,7 +104,6 @@
       });
 
       if (res.ok) {
-        alert("Товар успешно добавлен!");
         document.getElementById("productForm").reset();
         loadProducts();
       } else {
@@ -105,8 +128,7 @@
             <div class="card-body">
               <h5 class="card-title">${p.title}</h5>
               <p class="card-text">Цена: ${p.price} ₽</p>
-              <p class="card-text"><small class="text-muted">Артикул: ${p.sku || '-'}</small></p>
-              <button class="btn btn-warning btn-sm me-2" onclick="editProduct('${p.id}')">Редактировать</button>
+              <button class="btn btn-warning btn-sm me-2" onclick="openEdit('${p.id}', '${p.title}', '${p.description}', '${p.price}', '${p.sku}', '${p.image_url || ''}')">Редактировать</button>
               <button class="btn btn-danger btn-sm" onclick="deleteProduct('${p.id}')">Удалить</button>
             </div>
           </div>
@@ -122,28 +144,51 @@
         method: "DELETE",
         headers: { "x-admin-pass": adminPass }
       });
-      if (res.ok) {
-        loadProducts();
-      } else {
-        alert("Ошибка при удалении");
-      }
+      if (res.ok) loadProducts();
     }
 
-    // Редактирование товара
-    async function editProduct(id) {
-      const newTitle = prompt("Введите новое название:");
-      if (!newTitle) return;
+    // Открыть модалку редактирования
+    function openEdit(id, title, description, price, sku, image) {
+      document.getElementById("editId").value = id;
+      document.getElementById("editTitle").value = title;
+      document.getElementById("editDescription").value = description;
+      document.getElementById("editPrice").value = price;
+      document.getElementById("editSku").value = sku;
+      const modal = new bootstrap.Modal(document.getElementById("editModal"));
+      modal.show();
+    }
+
+    // Сохранить изменения
+    document.getElementById("editForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const id = document.getElementById("editId").value;
+      const title = document.getElementById("editTitle").value;
+      const description = document.getElementById("editDescription").value;
+      const price = document.getElementById("editPrice").value;
+      const sku = document.getElementById("editSku").value;
+      const imageFile = document.getElementById("editImage").files[0];
+
+      let imageUrl = null;
+      if (imageFile) {
+        const formData = new FormData();
+        formData.append("image", imageFile);
+        const uploadRes = await fetch("/api/upload", { method: "POST", body: formData });
+        const uploadData = await uploadRes.json();
+        imageUrl = uploadData.url;
+      }
+
       const res = await fetch("/api/products/" + id, {
         method: "PUT",
         headers: { "Content-Type": "application/json", "x-admin-pass": adminPass },
-        body: JSON.stringify({ title: newTitle })
+        body: JSON.stringify({ title, description, price, sku, image_url: imageUrl })
       });
+
       if (res.ok) {
+        const modal = bootstrap.Modal.getInstance(document.getElementById("editModal"));
+        modal.hide();
         loadProducts();
-      } else {
-        alert("Ошибка при редактировании");
       }
-    }
+    });
   </script>
 </body>
 </html>
