--- a/public/admin.html
+++ b/public/admin.html
@@ -35,7 +35,7 @@
 
   <script>
     const API = '/api';
-    const ADMIN_PASS = 'changeme'; // поменяй на свой пароль!
+    const ADMIN_PASS = '012127471266Jo@'; // поменяй на свой пароль!
 
     // Загрузка фото на сервер
     async function uploadImage(file) {
